{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 339,
  "lineage": "1c704874-19c5-c2ff-dc83-63861b50d887",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraformec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Brijesh_VPC_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191866406821:internet-gateway/igw-0808e4095eec31f81",
            "id": "igw-0808e4095eec31f81",
            "owner_id": "191866406821",
            "tags": {
              "Name": "Brijesh VPC Internet Gateway"
            },
            "vpc_id": "vpc-0c7bac2240789acf9"
          },
          "dependencies": [
            "aws_vpc.Brijesh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Brijesh_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Brijesh_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:191866406821:targetgroup/Brijeshalbtg/d60a98b86991a856",
            "arn_suffix": "targetgroup/Brijeshalbtg/d60a98b86991a856",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:191866406821:targetgroup/Brijeshalbtg/d60a98b86991a856",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Brijeshalbtg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7bac2240789acf9"
          },
          "dependencies": [
            "aws_vpc.Brijesh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Brijesh_tg_attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Brijesh_tg_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "My_VPC_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0808e4095eec31f81",
            "id": "r-rtb-01ade5aa6b9a8cb301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01ade5aa6b9a8cb30",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.Brijesh_VPC_GW",
            "aws_route_table.Brijesh_VPC_route_table",
            "aws_vpc.Brijesh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Brijesh_VPC_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01ade5aa6b9a8cb30",
            "owner_id": "191866406821",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Brijesh VPC Route Table"
            },
            "vpc_id": "vpc-0c7bac2240789acf9"
          },
          "dependencies": [
            "aws_vpc.Brijesh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "My_VPC_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1e85f8813c9969a",
            "route_table_id": "rtb-01ade5aa6b9a8cb30",
            "subnet_id": "subnet-0fe85e73e616849a6"
          },
          "dependencies": [
            "aws_route_table.Brijesh_VPC_route_table",
            "aws_subnet.Brijesh_Subnet",
            "aws_vpc.Brijesh_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06805875761d20971",
            "route_table_id": "rtb-01ade5aa6b9a8cb30",
            "subnet_id": "subnet-057db7f22675bf23a"
          },
          "dependencies": [
            "aws_route_table.Brijesh_VPC_route_table",
            "aws_subnet.Brijesh_Subnet",
            "aws_vpc.Brijesh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Brijesh_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191866406821:security-group/sg-0381d421bf42f6f2b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0381d421bf42f6f2b",
            "ingress": [],
            "name": "Brijesh-alb-sg",
            "name_prefix": null,
            "owner_id": "191866406821",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c7bac2240789acf9"
          },
          "dependencies": [
            "aws_vpc.Brijesh_VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_VPC_Priavte_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191866406821:security-group/sg-0c1977e2eefc464d5",
            "description": "Brijesh Priavte VPC Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1977e2eefc464d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Brijesh Private VPC Security Group",
            "name_prefix": null,
            "owner_id": "191866406821",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Brijesh  Private VPC Security Group",
              "Name": "Brijesh Private VPC Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7bac2240789acf9"
          },
          "dependencies": [
            "aws_vpc.Brijesh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_VPC_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191866406821:security-group/sg-06f5b4e7fa5a49e5b",
            "description": "Brijesh VPC Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f5b4e7fa5a49e5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0381d421bf42f6f2b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Brijesh VPC Security Group",
            "name_prefix": null,
            "owner_id": "191866406821",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Brijesh VPC Security Group",
              "Name": "Brijesh VPC Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7bac2240789acf9"
          },
          "dependencies": [
            "aws_security_group.Brijesh_alb_sg",
            "aws_vpc.Brijesh_VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_outbound_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2619610338",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0381d421bf42f6f2b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.Brijesh_alb_sg",
            "aws_vpc.Brijesh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-560747467",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0381d421bf42f6f2b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.Brijesh_alb_sg",
            "aws_vpc.Brijesh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Brijesh_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191866406821:subnet/subnet-0fe85e73e616849a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fe85e73e616849a6",
            "map_public_ip_on_launch": true,
            "owner_id": "191866406821",
            "tags": {
              "Name": "Brijesh publice 1 Subnet"
            },
            "vpc_id": "vpc-0c7bac2240789acf9"
          },
          "dependencies": [
            "aws_vpc.Brijesh_VPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191866406821:subnet/subnet-057db7f22675bf23a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-057db7f22675bf23a",
            "map_public_ip_on_launch": true,
            "owner_id": "191866406821",
            "tags": {
              "Name": "Brijesh publice 1 Subnet"
            },
            "vpc_id": "vpc-0c7bac2240789acf9"
          },
          "dependencies": [
            "aws_vpc.Brijesh_VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Brijesh_Subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191866406821:subnet/subnet-03e09dbca4e9bc1d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03e09dbca4e9bc1d4",
            "map_public_ip_on_launch": false,
            "owner_id": "191866406821",
            "tags": {
              "Name": "Brijesh Private Subnet"
            },
            "vpc_id": "vpc-0c7bac2240789acf9"
          },
          "dependencies": [
            "aws_vpc.Brijesh_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Brijesh_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191866406821:vpc/vpc-0c7bac2240789acf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b013c560e7377d68",
            "default_route_table_id": "rtb-0c2e905573592f49c",
            "default_security_group_id": "sg-0f635766df531fd70",
            "dhcp_options_id": "dopt-e799fa9c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c7bac2240789acf9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c2e905573592f49c",
            "owner_id": "191866406821",
            "tags": {
              "Name": "Brijesh_VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}